@@ -679,6 +679,27 @@ class TypesTest(TestBase, AssertsCompiledSQL):
         finally:
             t1.drop()
     
+    @testing.provide_metadata
+    def test_rowid(self):
+        t = Table('t1', metadata,
+            Column('x', Integer)
+        )
+        t.create()
+        t.insert().execute(x=5)
+        s1 = select([t])
+        s2 = select([column('rowid')]).select_from(s1)
+        rowid = s2.scalar()
+        
+        # the ROWID type is not really needed here,
+        # as cx_oracle just treats it as a string,
+        # but we want to make sure the ROWID works...
+        rowid_col= column('rowid', oracle.ROWID)
+        s3 = select([t.c.x, rowid_col]).\
+                    where(rowid_col == cast(rowid, oracle.ROWID))
+        eq_(s3.select().execute().fetchall(),
+        [(5, rowid)]
+        )
+        
     @testing.fails_on('+zxjdbc',
                       'Not yet known how to pass values of the '
                       'INTERVAL type')
