@@ -222,6 +222,11 @@ CHANGES
   - Fixed "default schema" query to work with
     pymssql backend.
 
+- oracle
+  - Added ROWID type to the Oracle dialect, for those
+    cases where an explicit CAST might be needed.
+    [ticket:1879]
+    
 - examples
   - The beaker_caching example has been reorgnized
     such that the Session, cache manager, 
